--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,5 +4,5 @@ body{
   margin:0;
   box-sizing: border-box;
   background-color: #F7F7F7;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif
 }
