--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mukta&display=swap');
 
 body{
   margin:0;
   box-sizing: border-box;
   background-color: #F7F7F7;
-  font-family: 'Montserrat', sans-serif
+  font-family: 'Mukta', sans-serif;
 }
